# chatgpt-for-telegram

./: .env.example  .gitignore  README.md  __init__.py  allowed.py  prompts  pyproject.toml  requirements.txt  start.py
handlers/: __init__.py
src/: allowed.py  db.py  handler.py  handlers.py  helpers.py  start.py  utils.py
src/constants/: __init__.py  commands.py  constant.py  handlers.py  messages.py  models.py  prompts.py
src/handlers/: __init__.py  admin_handler.py  document_handler.py  image_gen_handler.py  message_handler.py  my_assistants_handler.py  my_prompts_handle.py  my_prompts_handler.py  new_assistant_handler.py  new_prompt_handler.py  reset_handler.py  switch_model_handler.py  translator_handler.py  vision_handler.py
src/helpers/: __init__.py  msp.py  permission.py  request.py  unauthorize.py
src/utils/: __init__.py  _db.py  checks.py  db.py  document.py  operations.py
tests/: test.py
