[tool.poetry]
name = "telegram bot for chatgpt"
version = "0.1.0"
description = "telegram bot for using chatgpt"
authors = ["sirlaurie"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.0"
tiktoken = "^0.4.0"
pymupdf = "^1.22.5"
httpx = {extras = ["http2"], version = "^0.24.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
