[tool.poetry]
name = "bot"
version = "0.2.0"
description = "a telegram bot for openai chatgpt"
authors = ["sirlaurie <liusuzhang@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.0.0"
python-telegram-bot = "^21.0"
pymupdf = "^1.0.0"
google-generativeai = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
